# Programming

./: .gitignore  README.md
common/: learning_a_new_language.md  my_own_language.md
cs/: CodePlay.sln
pascal/: testunary
py/: notes.md
py3/toolchain/cats/: pyproject.toml
racket/: booleans.rkt  cond.rkt  datatypes.rkt  def_streams.rkt  defs.rkt  delay_force.rkt  delayed_eval.rkt  dispatch.rkt  dynamic.rkt  hw4.rkt  hw4_provided.rkt  interpreter.rkt  lists.rkt  local_bindings.rkt  loops.rkt  macros.rkt  mconses.rkt  memoization.rkt  mutation.rkt  structs.rkt  tests.rkt  thunk_exp.rkt  truth_of_cons.rkt
rb/: alias.rb  blocks.rb  extend_class.rb  hashes.rb  hello.rb  procs.rb  props.rb  ranges.rb  rational.rb  subclasses.rb  using_blocks.rb
rust/example/cargos/foo/: Cargo.toml
rust/web/foundation/: Cargo.toml  questions.json
rust/web/foundation/handle_errors/: Cargo.toml
rust/web/foundation/handle_errors/src/: lib.rs
rust/web/foundation/migrations/: 20240120051034_questions_table.down.sql  20240120051034_questions_table.up.sql
rust/web/foundation/src/: main.rs  store.rs
rust/web/foundation/src/routes/: answer.rs  question.rs
rust/web/foundation/src/types/: answer.rs  pagination.rs  question.rs
sml/: adts.sml  avoid_repeated_comp.sml  callbacks.sml  closure_perf.sml  compose_fun.sml  curry_non_curry.sml  currying.sml  datatype_bindings.sml  dates.sml  exceptions.sml  exp.sml  first.sml  folds.sml  fun.sml  fun_arg_patterns.sml  fun_as_args.sml  fun_patterns.sml  funs.sml  generic_types.sml  hw2provided.sml  hw3provided.sml  lets.sml  list_fun.sml  (+18 more)
(+1213 files in other folders)
