workspace = { members = ["handle_errors"] }
[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handle_errors = { path = "handle_errors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
warp = { version = "0.3" }
#log = "0.4"
#log4rs = "1.2"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
uuid = { version = "0.8", features = ["v4"]}
