[package]
name = "foo"
version = "0.1.0"
edition = "2021"
authors = ["andersc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
rand = "0.8.5"
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
bar = { path = "../bar" } # from a path in the local filesystem
